--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
       };
 
       // Send the form data to the server
-      fetch('http://localhost:4000/app/v1/subscription/plans/currency/all', {
+      fetch('https://vgq66kx4xg.execute-api.us-east-1.amazonaws.com/dev/app/v1/subscription/plans/currency/all', {
         method: 'GET',
         headers: {
           'Content-Type': 'application/json'
